force-app/main/default/objects/Account/fields/AccountRecord_Type__c.field-meta.xml
<CustomField>
    <fullName>AccountRecord_Type__c</fullName>
    <description>Para la conversión de leads de cambio de titular en cuentas tipo cambio de titutlar</description>
    <label>AccountRecord Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>