force-app/main/default/objects/Account/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <label>Actividad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Colectividades / Servicios</fullName>
            </value>
            <value>
                <fullName>Doméstico Unifamiliar</fullName>
            </value>
            <value>
                <fullName>HRO (Hotel-Restaurante-Ocio)</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>