force-app/main/default/objects/Account/fields/Actividad_oculta__c.field-meta.xml
<CustomField>
    <fullName>Actividad_oculta__c</fullName>
    <description>Campo oculto que viene del candidato y se usa para la regla de validación de asignación de la cuenta según código postal</description>
    <label>Actividad oculta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>