force-app/main/default/objects/Account/fields/Alerta_Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Bloqueo__c</fullName>
    <label>Alerta bloqueo</label>
    <type>TextArea</type>
</CustomField>