force-app/main/default/objects/Account/fields/Anos_recuperacion_inv__c.field-meta.xml
<CustomField>
    <fullName>Anos_recuperacion_inv__c</fullName>
    <label>Años recuperación inv.</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>