force-app/main/default/objects/Account/fields/Apellidos_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Apellidos_representante_legal__c</fullName>
    <description>Se usa para cambios de titular</description>
    <label>Apellidos representante legal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>