force-app/main/default/objects/Account/fields/Busqueda_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Busqueda_proveedor__c</fullName>
    <formula>Codigo_proveedor__c &amp;&quot; &quot;&amp; Name</formula>
    <label>Búsqueda proveedor</label>
    <type>Text</type>
</CustomField>