force-app/main/default/objects/Account/fields/C_d_Inter_s__c.field-meta.xml
<CustomField>
    <fullName>C_d_Inter_s__c</fullName>
    <label>Cód. Interés</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5 NAC.</fullName>
            </value>
            <value>
                <fullName>2.0 INTL</fullName>
            </value>
            <value>
                <fullName>93002328</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>