force-app/main/default/objects/Account/fields/C_digo_tarifa__c.field-meta.xml
<CustomField>
    <fullName>C_digo_tarifa__c</fullName>
    <label>Código tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>91001064</fullName>
            </value>
            <value>
                <fullName>91001632</fullName>
            </value>
            <value>
                <fullName>91001753</fullName>
            </value>
            <value>
                <fullName>91002027</fullName>
            </value>
            <value>
                <fullName>91002348</fullName>
            </value>
            <value>
                <fullName>91002421</fullName>
            </value>
            <value>
                <fullName>91002692</fullName>
            </value>
            <value>
                <fullName>91002949</fullName>
            </value>
            <value>
                <fullName>92000600</fullName>
            </value>
            <value>
                <fullName>92000635</fullName>
            </value>
            <value>
                <fullName>92000947</fullName>
            </value>
            <value>
                <fullName>92001811</fullName>
            </value>
            <value>
                <fullName>92001811.</fullName>
            </value>
            <value>
                <fullName>93000067</fullName>
            </value>
            <value>
                <fullName>93000070</fullName>
            </value>
            <value>
                <fullName>93000074</fullName>
            </value>
            <value>
                <fullName>93000080</fullName>
            </value>
            <value>
                <fullName>93000107</fullName>
            </value>
            <value>
                <fullName>93000217</fullName>
            </value>
            <value>
                <fullName>93000227</fullName>
            </value>
            <value>
                <fullName>93000249</fullName>
            </value>
            <value>
                <fullName>93000249.</fullName>
            </value>
            <value>
                <fullName>93000250</fullName>
            </value>
            <value>
                <fullName>93000250.</fullName>
            </value>
            <value>
                <fullName>93000278</fullName>
            </value>
            <value>
                <fullName>93000344</fullName>
            </value>
            <value>
                <fullName>93000353</fullName>
            </value>
            <value>
                <fullName>93000359</fullName>
            </value>
            <value>
                <fullName>93000405</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>