force-app/main/default/objects/Account/fields/Calle_2__c.field-meta.xml
<CustomField>
    <fullName>Calle_2__c</fullName>
    <label>Calle 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>