force-app/main/default/objects/Account/fields/Calle_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Calle_Facturacion__c</fullName>
    <label>Calle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>