force-app/main/default/objects/Account/fields/Cambio_a__c.field-meta.xml
<CustomField>
    <fullName>Cambio_a__c</fullName>
    <label>Cambio a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competencia GLP</fullName>
            </value>
            <value>
                <fullName>Competencia GNL</fullName>
            </value>
            <value>
                <fullName>Otras energías/soluciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>