force-app/main/default/objects/Account/fields/Canal_de_comunicaci_n_preferido__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_comunicaci_n_preferido__c</fullName>
    <label>Canal de comunicación preferido</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>