force-app/main/default/objects/Account/fields/canalizado_promotor__c.field-meta.xml
<CustomField>
    <fullName>canalizado_promotor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canalizado promotor</label>
    <referenceTo>Canalizado_promotor__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>