force-app/main/default/objects/Account/fields/Cargo_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Cargo_representante_legal__c</fullName>
    <inlineHelpText>Se usa para cambios de titutlar</inlineHelpText>
    <label>Cargo representante legal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>