force-app/main/default/objects/Account/fields/CNAE1__c.field-meta.xml
<CustomField>
    <fullName>CNAE1__c</fullName>
    <label>CNAE1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Agricultura, ganadería, silvicultura y pesca</fullName>
            </value>
            <value>
                <fullName>B - Industrias extractivas</fullName>
            </value>
            <value>
                <fullName>C - Industria manufacturera</fullName>
            </value>
            <value>
                <fullName>D - Suministro de energía eléctrica, gas, vapor y aire acondicionado</fullName>
            </value>
            <value>
                <fullName>E - Suministro de agua, actividades de saneamiento, gestión de residuos y descontaminación</fullName>
            </value>
            <value>
                <fullName>F - Construcción</fullName>
            </value>
            <value>
                <fullName>G - Comercio al por mayor y al por menor; reparación de vehículos de motor y motocicletas</fullName>
            </value>
            <value>
                <fullName>H - Transporte y almacenamiento</fullName>
            </value>
            <value>
                <fullName>I - Hostelería</fullName>
            </value>
            <value>
                <fullName>J - Información y comunicaciones</fullName>
            </value>
            <value>
                <fullName>K - Actividades financieras y de seguros</fullName>
            </value>
            <value>
                <fullName>L - Actividades inmobiliarias</fullName>
            </value>
            <value>
                <fullName>M - Actividades profesionales, científicas y técnicas</fullName>
            </value>
            <value>
                <fullName>N - Actividades administrativas y servicios auxliares</fullName>
            </value>
            <value>
                <fullName>O - Administración Pública y defensa; Seguridad Social obligatoria</fullName>
            </value>
            <value>
                <fullName>P - Educación</fullName>
            </value>
            <value>
                <fullName>Q - Actividades sanitarias y de servicios sociales</fullName>
            </value>
            <value>
                <fullName>R - Actividades artísticas, recreativas y de entrenimiento</fullName>
            </value>
            <value>
                <fullName>S - Otros servicios</fullName>
            </value>
            <value>
                <fullName>T - Actividades de los hogares como empleadores de personal doméstico; actividades de los hogares como productores de bienes y servicios para uso propio</fullName>
            </value>
            <value>
                <fullName>U - Actividades de organizaciones y organismos extraterritoriales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>