force-app/main/default/objects/Account/fields/CNAE2__c.field-meta.xml
<CustomField>
    <fullName>CNAE2__c</fullName>
    <label>CNAE2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CNAE1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Agricultura, ganadería, caza y servicios relacionados con las mismas</fullName>
            </value>
            <value>
                <fullName>02 - Silvicultura y explotación forestal</fullName>
            </value>
            <value>
                <fullName>03 - Pesca y acuicultura</fullName>
            </value>
            <value>
                <fullName>05 - Extracción de antracita, hulla y lignito</fullName>
            </value>
            <value>
                <fullName>06 - Extracción de crudo de petróleo y gas natural</fullName>
            </value>
            <value>
                <fullName>07 - Extracción de minerales metálicos</fullName>
            </value>
            <value>
                <fullName>08 - Otras industrias extractivas</fullName>
            </value>
            <value>
                <fullName>09 - Actividades de apoyo a las industrias extractivas</fullName>
            </value>
            <value>
                <fullName>10 - Industria de la alimentación</fullName>
            </value>
            <value>
                <fullName>11 - Fabricación de bebidas</fullName>
            </value>
            <value>
                <fullName>12 - Industria del tabaco</fullName>
            </value>
            <value>
                <fullName>13 - Industria textil</fullName>
            </value>
            <value>
                <fullName>14 - Confección de prendas de vestir</fullName>
            </value>
            <value>
                <fullName>15 - Industria del cuero y del calzado</fullName>
            </value>
            <value>
                <fullName>16 - Industria de la madera y del corcho, excepto muebles; cestería y espartería</fullName>
            </value>
            <value>
                <fullName>17 - Industria del papel</fullName>
            </value>
            <value>
                <fullName>18 - Artes gráficas y reproducción de soportes grabados</fullName>
            </value>
            <value>
                <fullName>19 - Coquerías y refino de petróleo</fullName>
            </value>
            <value>
                <fullName>20 - Industria química</fullName>
            </value>
            <value>
                <fullName>21 - Fabricación de productos farmacéuticos</fullName>
            </value>
            <value>
                <fullName>22 - Fabricación de productos de caucho y plásticos</fullName>
            </value>
            <value>
                <fullName>23 - Fabricación de otros productos minerales no metálicos</fullName>
            </value>
            <value>
                <fullName>24 - Metalurgia; fabricación de productos de hierro, acero y ferroaleaciones</fullName>
            </value>
            <value>
                <fullName>25 - Fabricación de productos metálicos, excepto maquinaria y equipo</fullName>
            </value>
            <value>
                <fullName>26 - Fabricación de productos informáticos, electrónicos y ópticos</fullName>
            </value>
            <value>
                <fullName>27 - Fabricación de material y equipo eléctrico</fullName>
            </value>
            <value>
                <fullName>28 - Fabricación de maquinaria y equipo n.c.o.p.</fullName>
            </value>
            <value>
                <fullName>29 - Fabricación de vehículos de motor, remolques y semirremolques</fullName>
            </value>
            <value>
                <fullName>30 - Fabricación de otro material de transporte</fullName>
            </value>
            <value>
                <fullName>31 - Fabricación de muebles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>