force-app/main/default/objects/Account/fields/CNAE3__c.field-meta.xml
<CustomField>
    <fullName>CNAE3__c</fullName>
    <label>CNAE3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CNAE2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>011 - Cultivos no perennes</fullName>
            </value>
            <value>
                <fullName>012 - Cultivos perennes</fullName>
            </value>
            <value>
                <fullName>013 - Propagación de plantas</fullName>
            </value>
            <value>
                <fullName>014 - Producción ganadera</fullName>
            </value>
            <value>
                <fullName>015 - Producción agrícola combinada con la producción ganadera</fullName>
            </value>
            <value>
                <fullName>016 - Act. de apoyo a la agricultura, a la ganadería y de preparación posterior a la cosecha</fullName>
            </value>
            <value>
                <fullName>017 - Caza, captura de animales y servicios relacionados con las mismas</fullName>
            </value>
            <value>
                <fullName>021 - Silvicultura y otras Act. forestales</fullName>
            </value>
            <value>
                <fullName>022 - Explotación de la madera</fullName>
            </value>
            <value>
                <fullName>023 - Recolección de productos silvestres, excepto madera</fullName>
            </value>
            <value>
                <fullName>024 - Servicios de apoyo a la silvicultura</fullName>
            </value>
            <value>
                <fullName>031 - Pesca</fullName>
            </value>
            <value>
                <fullName>032 - Acuicultura</fullName>
            </value>
            <value>
                <fullName>051 - Extracción de antracita y hulla</fullName>
            </value>
            <value>
                <fullName>052 - Extracción de lignito</fullName>
            </value>
            <value>
                <fullName>061 - Extracción de crudo de petróleo</fullName>
            </value>
            <value>
                <fullName>062 - Extracción de gas natural</fullName>
            </value>
            <value>
                <fullName>071 - Extracción de minerales de hierro</fullName>
            </value>
            <value>
                <fullName>072 - Extracción de minerales metálicos no férreos</fullName>
            </value>
            <value>
                <fullName>081 - Extracción de piedra, arena y arcilla</fullName>
            </value>
            <value>
                <fullName>089 - Industrias extractivas n.c.o.p.</fullName>
            </value>
            <value>
                <fullName>091 - Act. de apoyo a la extracción de petróleo y gas natural</fullName>
            </value>
            <value>
                <fullName>099 - Act. de apoyo a otras industrias extractivas</fullName>
            </value>
            <value>
                <fullName>101 - Procesado y conservación de carne y elaboración de productos cárnicos</fullName>
            </value>
            <value>
                <fullName>102 - Procesado y conservación de pescados, crustáceos y moluscos</fullName>
            </value>
            <value>
                <fullName>103 - Procesado y conservación de frutas y hortalizas</fullName>
            </value>
            <value>
                <fullName>104 - Fab. de aceites y grasas vegetales y animales</fullName>
            </value>
            <value>
                <fullName>105 - Fab. de productos lácteos</fullName>
            </value>
            <value>
                <fullName>106 - Fab. de productos de molinería, almidones y productos amiláceos</fullName>
            </value>
            <value>
                <fullName>107 - Fab. de productos de panadería y pastas alimenticias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>