force-app/main/default/objects/Account/fields/Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Cobrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobrado</label>
    <type>Checkbox</type>
</CustomField>