force-app/main/default/objects/Account/fields/Cod_dias_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_dias_pago__c</fullName>
    <label>Cód. días pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>¿?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>