force-app/main/default/objects/Account/fields/Cod_forma_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_forma_pago__c</fullName>
    <label>Cód. forma pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 BONOS</fullName>
            </value>
            <value>
                <fullName>ANTICIPAR</fullName>
            </value>
            <value>
                <fullName>APLAZAM</fullName>
            </value>
            <value>
                <fullName>BANKINTER</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
            <value>
                <fullName>CONF CHEQ</fullName>
            </value>
            <value>
                <fullName>CONF TRANS</fullName>
            </value>
            <value>
                <fullName>CUOTA</fullName>
            </value>
            <value>
                <fullName>DEVOLUCION</fullName>
            </value>
            <value>
                <fullName>DIA 20</fullName>
            </value>
            <value>
                <fullName>DOMI</fullName>
            </value>
            <value>
                <fullName>EFECTIVO</fullName>
            </value>
            <value>
                <fullName>GASTOS</fullName>
            </value>
            <value>
                <fullName>LA CAIXA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ</fullName>
            </value>
            <value>
                <fullName>PAGO CERTI</fullName>
            </value>
            <value>
                <fullName>RECIBO</fullName>
            </value>
            <value>
                <fullName>SANTANDER</fullName>
            </value>
            <value>
                <fullName>TRANSF-DIV</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>PRIMAFACIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>