force-app/main/default/objects/Account/fields/Cod_terminos_pago__c.field-meta.xml
<CustomField>
    <fullName>Cod_terminos_pago__c</fullName>
    <label>Cód, términos pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>000</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>015</fullName>
            </value>
            <value>
                <fullName>0X47</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>1050</fullName>
            </value>
            <value>
                <fullName>10X30</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>1110</fullName>
            </value>
            <value>
                <fullName>11X30</fullName>
            </value>
            <value>
                <fullName>12 BONOS</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>12X30</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>15X30</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>18MENS</fullName>
            </value>
            <value>
                <fullName>20+15</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>20X30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>