force-app/main/default/objects/Account/fields/Codigo_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_proveedor__c</fullName>
    <label>Código proveedor</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>