force-app/main/default/objects/Account/fields/Colaborador_activo__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo utilizado para los registros de tipo &quot;Partner&quot;, que indica si el colaborador está activo o no.</description>
    <inlineHelpText>Campo utilizado para los registros de tipo &quot;Partner&quot;, que indica si el colaborador está activo o no.</inlineHelpText>
    <label>Colaborador activo</label>
    <type>Checkbox</type>
</CustomField>