force-app/main/default/objects/Account/fields/Consumo_ltimo_a_o_perdido__c.field-meta.xml
<CustomField>
    <fullName>Consumo_ltimo_a_o_perdido__c</fullName>
    <label>Consumo último año perdido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>