force-app/main/default/objects/Account/fields/Contrase_a_web_clientes__c.field-meta.xml
<CustomField>
    <fullName>Contrase_a_web_clientes__c</fullName>
    <label>Contraseña web clientes</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>