force-app/main/default/objects/Account/fields/Contrasenya_web_visible__c.field-meta.xml
<CustomField>
    <fullName>Contrasenya_web_visible__c</fullName>
    <label>Contrasenya web visible</label>
    <length>16</length>
    <type>Text</type>
</CustomField>