force-app/main/default/objects/Account/fields/Contrato_activo__c.field-meta.xml
<CustomField>
    <fullName>Contrato_activo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato activo del que obtener los valores para la sección de Pagos</description>
    <label>Contrato activo</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>