force-app/main/default/objects/Account/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo indica si la cuenta se ha creado por la conversión de un candidato. Se utiliza en el workflow que asigna la cuenta a un usuario dependiendo de la provincia o del código postal.</description>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>