force-app/main/default/objects/Account/fields/Credito_maximo_DL__c.field-meta.xml
<CustomField>
    <fullName>Credito_maximo_DL__c</fullName>
    <label>Crédito máximo (DL)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>