force-app/main/default/objects/Account/fields/ctlInternalSource__c.field-meta.xml
<CustomField>
    <fullName>ctlInternalSource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite conocer si la cuenta proviene de un prospect generado directamente en SF</description>
    <label>Origen</label>
    <type>Checkbox</type>
</CustomField>