force-app/main/default/objects/Account/fields/Cuenta_actualizada_desde_codigo__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_actualizada_desde_codigo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si la cuenta se actualizó desde código</description>
    <label>Cuenta actualizada desde código</label>
    <type>Checkbox</type>
</CustomField>