force-app/main/default/objects/Account/fields/Cuenta_bloqueada_cambio__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_bloqueada_cambio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sirve de semáforo a la hora de actualizar una cuenta</description>
    <label>Cuenta bloqueada cambio</label>
    <type>Checkbox</type>
</CustomField>