force-app/main/default/objects/Account/fields/Cumplimiento_consumo__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento_consumo__c</fullName>
    <label>% Cumplimiento consumo</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>