force-app/main/default/objects/Account/fields/D_as_pago__c.field-meta.xml
<CustomField>
    <fullName>D_as_pago__c</fullName>
    <label>Días pago</label>
    <length>50</length>
    <type>Text</type>
</CustomField>