force-app/main/default/objects/Account/fields/Detalle_cambio__c.field-meta.xml
<CustomField>
    <fullName>Detalle_cambio__c</fullName>
    <label>Detalle cambio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cambio_a__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repsol</fullName>
            </value>
            <value>
                <fullName>Cepsa</fullName>
            </value>
            <value>
                <fullName>Vitogas</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>HAM</fullName>
            </value>
            <value>
                <fullName>MOLGAS</fullName>
            </value>
            <value>
                <fullName>Crisergas</fullName>
            </value>
            <value>
                <fullName>Red GN</fullName>
            </value>
            <value>
                <fullName>Botellas</fullName>
            </value>
            <value>
                <fullName>Gasóleo/fuel</fullName>
            </value>
            <value>
                <fullName>Biomasa</fullName>
            </value>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Geotermia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>