force-app/main/default/objects/Account/fields/Detalles_baja__c.field-meta.xml
<CustomField>
    <fullName>Detalles_baja__c</fullName>
    <label>Código cliente nuevo</label>
    <type>TextArea</type>
</CustomField>